--- a/views/main-layout.ejs
+++ b/views/main-layout.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %> - Hilman's Project Inventory</title>
     <link rel="stylesheet" href="/styles/styles.css">
-    <script src="/modules/main.js" defer></script>
+    <script type="module" src="/modules/main.js" defer></script>
   </head>
   <body>
     <%- include("partials/sidebar") %>
