feat: create basic sidebar view

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -19,11 +19,11 @@
   <nav>
     <ul role="list">
       <li><a href="/?page=1">All Projects</a></li>
-      <li><a href="">Web Development</a></li>
-      <li><a href="">Vanilla</a></li>
-      <li><a href="">Tool</a></li>
-      <li><a href="">Utility</a></li>
-      <li><a href="">Data Analysis</a></li>
+      <li><a href="/?category=6&page=1">Web Development</a></li>
+      <li><a href="/?category=5&page=1">Vanilla</a></li>
+      <li><a href="/?category=8&page=1">Tool</a></li>
+      <li><a href="/?category=9&page=1">Utility</a></li>
+      <li><a href="/?category=13&page=1">Data Analysis</a></li>
     </ul>
   </nav>
 </aside>
