WIP: create index page view

--- a/views/main-layout.ejs
+++ b/views/main-layout.ejs
@@ -9,7 +9,7 @@
   </head>
   <body>
     <%- include("partials/sidebar") %>
-    <main><%- include(page) %></main>
+    <%- include(page) %>
     <%- include("partials/footer") %>
   </body>
 </html>
