fix: change new-page view to add-page view

--- a/views/add-project.ejs
+++ b/views/add-project.ejs
@@ -1,6 +1,6 @@
 <main>
-  <form action="/new" method="post">
-    <h2>New project</h2>
+  <form action="/add" method="post">
+    <h2>Add a project</h2>
     <%- include("partials/errors.ejs") %>
     <p class="required">All required fields are marked with an asterisk (*)</p>
     <div>
