feat: add edit-project page view

--- a/views/add-project.ejs
+++ b/views/add-project.ejs
@@ -21,11 +21,11 @@
       <label for="image">Project image URL</label>
       <input type="url" name="image" id="image">
       <label for="category">Category</label>
-      <input type="text" name="category" id="category">
+      <input type="text" name="category" id="category" placeholder="(Separate multiple items using commas (,))">
       <label for="language">Language</label>
-      <input type="text" name="language" id="language">
+      <input type="text" name="language" id="language" placeholder="(Separate multiple items using commas (,))">
       <label for="tool">Tool</label>
-      <input type="text" name="tool" id="tool">
+      <input type="text" name="tool" id="tool" placeholder="(Separate multiple items using commas (,))">
     </div>
     <button>Submit</button>
   </form>
