--- a/views/edit-project.ejs
+++ b/views/edit-project.ejs
@@ -7,25 +7,25 @@
       <label for="password">Admin password <span class="required">*</span></label>
       <input type="password" name="password" id="password" required>
       <label for="name">Project name <span class="required">*</span></label>
-      <input type="text" name="name" id="name" required>
+      <input type="text" name="name" id="name" value="<%= project.name %>" required>
       <label for="description">Project description</label>
-      <textarea name="description" id="description"></textarea>
+      <textarea name="description" id="description"><%= project.description %></textarea>
       <label for="features">Features</label>
-      <textarea name="features" id="features"></textarea>
+      <textarea name="features" id="features"><%= project.features %></textarea>
       <label for="stack">Tech stack</label>
-      <textarea name="stack" id="stack"></textarea>
+      <textarea name="stack" id="stack"><%= project.stack %></textarea>
       <label for="source">Source code URL</label>
-      <input type="url" name="source" id="source">
+      <input type="url" name="source" id="source" value="<%= project.source %>">
       <label for="website">Website URL</label>
-      <input type="url" name="website" id="website">
+      <input type="url" name="website" id="website" value="<%= project.website %>">
       <label for="image">Project image URL</label>
-      <input type="url" name="image" id="image">
+      <input type="url" name="image" id="image" value="<%= project.image %>">
       <label for="category">Category</label>
-      <input type="text" name="category" id="category">
+      <input type="text" name="category" id="category" value="<%= project.category %>" placeholder="(Separate multiple items using commas (,))">
       <label for="language">Language</label>
-      <input type="text" name="language" id="language">
+      <input type="text" name="language" id="language" value="<%= project.language %>" placeholder="(Separate multiple items using commas (,))">
       <label for="tool">Tool</label>
-      <input type="text" name="tool" id="tool">
+      <input type="text" name="tool" id="tool" value="<%= project.tool %>" placeholder="(Separate multiple items using commas (,))">
     </div>
     <button>Submit</button>
   </form>
