--- a/views/partials/errors.ejs
+++ b/views/partials/errors.ejs
@@ -1,5 +1,5 @@
 <% if (locals.errors) {%>
-<h3>Failed to submit the form</h3>
+<h3>Failed to submit:</h3>
 <ul>
   <% errors.forEach(function(error) { %>
   <li><%= error.msg %></li>
