style: style sidebar view

--- a/views/main-layout.ejs
+++ b/views/main-layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %> - Hilman's Project Inventory</title>
+    <link rel="icon" type="image/svg+xml" href="/images/chart-no-axes-gantt.svg" />
     <link rel="stylesheet" href="/styles/styles.css">
     <script type="module" src="/modules/main.js" defer></script>
   </head>
