--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,16 +1,13 @@
 <aside>
   <header>
-    <a href="/?category=1&page=1">
-      <div>
-        <img src="/images/chart-no-axes-gantt.svg" alt="App logo" />
-        <h1>
-          <pre>&lt; <span id="typing"></span
+    <h1>
+      <a href="/?category=1&page=1">
+        <pre>&lt; <span id="typing"></span
           ><span id="cursor"></span> /&gt;</pre>
-        </h1>
-      </div>
-    </a>
+      </a>
+    </h1>
     <form action="/add">
-      <button>
+      <button class="icon-text">
         <img src="/images/plus.svg" alt="Add icon" />
         <p>New project</p>
       </button>
