--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -40,6 +40,107 @@ img {
 
 /* custom */
 
+aside {
+  padding: 20px;
+  background-color: #f1f5f9;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  position: fixed;
+  width: 380px;
+  min-height: 100vh;
+  z-index: 1;
+  border-radius: 0 15px 15px 0;
+  box-shadow: 8px 0 10px -4px rgba(0, 0, 0, 0.3);
+}
+
+main {
+  margin-left: 380px;
+  padding: 30px 40px;
+  min-height: 100vh;
+  background-color: #f8fafc;
+}
+
+footer {
+  margin-left: 380px;
+  text-align: center;
+  background-color: #f8fafc;
+}
+
 pre {
   font-family: inherit;
+  font-size: 1.4rem;
+  font-weight: 600;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+button {
+  cursor: pointer;
+}
+
+nav > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+nav > ul > li {
+  background-color: #e2e8f0;
+  border-radius: 15px;
+  transition: all 0.3s ease-in-out;
+  border: 1px solid transparent;
+  margin-left: 20px;
+}
+
+nav > ul > li:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+  border-color: #cbd5e1;
+}
+
+nav > ul > li > a {
+  display: block;
+  padding: 10px 20px;
+}
+
+aside > header {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+aside button {
+  padding: 7px 30px 10px 25px;
+  border-radius: 40px;
+  box-shadow: inset 0 2px 5px rgba(255, 255, 255, 0.1),
+    inset 0 -2px 5px rgba(0, 0, 0, 0.4), 0 0 10px rgba(0, 0, 0, 0.3);
+  background-color: #62748e;
+  font-weight: 500;
+  color: white;
+  font-size: 1.1rem;
+  border: none;
+  transition: all 0.3s ease-in-out;
+  margin-inline: 10px;
+}
+
+aside button:hover {
+  transform: scale(1.05);
+  background-color: #475569;
+}
+
+.icon-text {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+
+.icon-text > img {
+  width: 24px;
 }
