style: style index filter view

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -49,14 +49,13 @@ aside {
   position: fixed;
   width: 380px;
   min-height: 100vh;
-  z-index: 1;
+  z-index: 2;
   border-radius: 0 15px 15px 0;
   box-shadow: 8px 0 10px -4px rgba(0, 0, 0, 0.3);
 }
 
 main {
   margin-left: 380px;
-  padding: 30px 40px;
   min-height: 100vh;
   background-color: #f8fafc;
 }
@@ -113,7 +112,7 @@ nav > ul > li > a {
 aside > header {
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 30px;
 }
 
 aside button {
@@ -143,4 +142,82 @@ aside button:hover {
 
 .icon-text > img {
   width: 24px;
+}
+
+.index {
+  padding-top: 150px;
+}
+
+.filter {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  padding: 20px 40px;
+  position: fixed;
+  top: 0;
+  left: 380px;
+  right: 0;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(30px);
+}
+
+.filter::before {
+  position: absolute;
+  bottom: 0;
+  left: 15px;
+  right: 15px;
+  height: min-content;
+  border-bottom: 0.5px solid rgba(100, 116, 139, 0.5); /* slate-500/50 */
+  content: "";
+}
+
+.filter::after {
+  position: absolute;
+  bottom: 0;
+  left: 15px;
+  right: 15px;
+  height: 1.5px;
+  background-color: #0f172a; /* slate-950 */
+  content: "";
+  transform-origin: center left;
+  animation: progress linear;
+  animation-timeline: scroll(root block);
+}
+
+@keyframes progress {
+  from {
+    transform: scaleX(0);
+  }
+}
+
+.filter > p {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.filter > form {
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr 1fr;
+  gap: 50px;
+}
+
+.filter > form > div {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+}
+
+.filter label {
+  font-weight: 500;
+}
+
+.filter button {
+  align-self: end;
+  justify-self: center;
+  padding: 6px 25px;
+}
+
+.list {
+  padding: 20px 40px;
 }
