--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
-<main>
-  <div>
+<main class="index">
+  <div class="filter">
     <p>Filter by</p>
     <form action="/">
       <div>
@@ -33,7 +33,7 @@
       <button>Apply</button>
     </form>
   </div>
-  <div>
+  <div class="list">
     <% const categoryName = indexQuery.category ? 
       filters.categories.find(item => item.id === indexQuery.category).name : "All projects"; %>
     <h2><%= categoryName[0].toUpperCase() + categoryName.slice(1) %></h2>
@@ -53,7 +53,6 @@
                 <% }); %>
               </div>
             </div>
-            <p>Category: <%= item.category.join(", ") %></p>
             <p><%= item.description %></p>
           </a>
           <p>Source code: <a href=<%= item.source %>><%= item.source %></a></p>
