--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -120,7 +120,7 @@ aside button {
   border-radius: 40px;
   box-shadow: inset 0 2px 5px rgba(255, 255, 255, 0.1),
     inset 0 -2px 5px rgba(0, 0, 0, 0.4), 0 0 10px rgba(0, 0, 0, 0.3);
-  background-color: #62748e;
+  background-color: #64748b;
   font-weight: 500;
   color: white;
   font-size: 1.1rem;
@@ -220,4 +220,130 @@ aside button:hover {
 
 .list {
   padding: 20px 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+.list > h2 {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.item-number {
+  font-size: 0.95rem;
+}
+
+.cards {
+  margin-block: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.cards > article {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  background-color: #64748b;
+  color: white;
+  border-radius: 12px;
+  transition: all 0.3s ease-in-out;
+  border: 1px solid transparent;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.4);
+}
+
+.cards > article:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+  border-color: #475569;
+}
+
+.cards > article > a > img {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+}
+
+.cards > article > a > div {
+  background-color: #f8fafc;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+}
+
+.cards > article > div {
+  padding-block: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.cards > article > div > a {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding-inline: 25px;
+}
+
+.cards > article > div > p {
+  font-weight: 500;
+  padding-inline: 25px;
+}
+
+.cards > article > div > p > a {
+  text-decoration-line: underline;
+  color: #bfdbfe;
+}
+
+.cards h3 {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.category {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  font-weight: 500;
+}
+
+.category > div {
+  display: flex;
+  gap: 10px;
+}
+
+.category > div > p {
+  background-color: #475569;
+  padding: 3px 8px;
+  border-radius: 12px;
+}
+
+.pagination {
+  align-self: center;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: repeat(3, 35px);
+}
+
+.pagination > p {
+  background-color: #64748b;
+  color: white;
+  text-align: center;
+  justify-self: stretch;
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding-block: 3px;
+  border-radius: 8px;;
+}
+
+.pagination img {
+  width: 28px;
+}
+
+.disable {
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.2;
 }
