--- a/views/project.ejs
+++ b/views/project.ejs
@@ -1,4 +1,4 @@
-<main>
+<main class="no-filter">
   <%- include("delete-project") %>
   <h2><%= project.name %></h2>
   <img src="<%= project.image %>" alt="Project image" />
