--- a/views/partials/errors.ejs
+++ b/views/partials/errors.ejs
@@ -1,8 +1,10 @@
 <% if (locals.errors) {%>
-<h3>Failed to submit:</h3>
-<ul>
-  <% errors.forEach(function(error) { %>
-  <li><%= error.msg %></li>
-  <% }); %>
-</ul>
+<div>
+  <h3 class="error-msg">Failed to submit:</h3>
+  <ul class="error-details">
+    <% errors.forEach(function(error) { %>
+    <li><%= error.msg %></li>
+    <% }); %>
+  </ul>
+</div>
 <% } %>
