--- a/views/add-project.ejs
+++ b/views/add-project.ejs
@@ -1,5 +1,5 @@
 <main class="no-filter">
-  <form action="/add" method="post" class="add-form">
+  <form action="/add" method="post" class="form">
     <h2>Add a project</h2>
     <%- include("partials/errors.ejs") %>
     <p class="required">All required fields are marked with an asterisk (*)</p>
