--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
                 <% }); %>
               </div>
             </div>
-            <p><%= item.description %></p>
+            <p class="desc"><%= item.description %></p>
           </a>
           <p>Source code: <a href=<%= item.source %> target="_blank" rel="noopener noreferrer"><%= item.source %></a></p>
         </div>
