--- a/views/partials/errors.ejs
+++ b/views/partials/errors.ejs
@@ -1,6 +1,6 @@
 <% if (locals.errors) {%>
 <div>
-  <h3 class="error-msg">Failed to submit:</h3>
+  <h3 class="error-msg">Submission failed:</h3>
   <ul class="error-details">
     <% errors.forEach(function(error) { %>
     <li><%= error.msg %></li>
