--- a/views/edit-project.ejs
+++ b/views/edit-project.ejs
@@ -1,19 +1,19 @@
 <main class="no-filter">
-  <form action="<%= `/project/${projectId}/edit` %>" method="post">
+  <form action="<%= `/project/${projectId}/edit` %>" method="post" class="form">
     <h2>Edit project</h2>
     <%- include("partials/errors.ejs") %>
     <p class="required">All required fields are marked with an asterisk (*)</p>
-    <div>
+    <div class="form-body">
       <label for="password">Admin password <span class="required">*</span></label>
       <input type="password" name="password" id="password" required>
       <label for="name">Project name <span class="required">*</span></label>
       <input type="text" name="name" id="name" value="<%= project.name %>" required>
       <label for="description">Project description</label>
-      <textarea name="description" id="description"><%= project.description %></textarea>
+      <textarea name="description" id="description" rows="10"><%= project.description %></textarea>
       <label for="features">Features</label>
-      <textarea name="features" id="features"><%= project.features %></textarea>
+      <textarea name="features" id="features" rows="10"><%= project.features %></textarea>
       <label for="stack">Tech stack</label>
-      <textarea name="stack" id="stack"><%= project.stack %></textarea>
+      <textarea name="stack" id="stack" rows="10"><%= project.stack %></textarea>
       <label for="source">Source code URL</label>
       <input type="url" name="source" id="source" value="<%= project.source %>">
       <label for="website">Website URL</label>
