--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,26 +1,29 @@
 <aside>
-  <header>
-    <h1>
-      <a href="/?category=1&page=1">
-        <pre>&lt; <span id="typing"></span
-          ><span id="cursor"></span> /&gt;</pre>
-      </a>
-    </h1>
-    <form action="/add">
-      <button class="icon-text">
-        <img src="/images/plus.svg" alt="Add icon" />
-        <p>New project</p>
-      </button>
-    </form>
-  </header>
-  <nav>
-    <ul role="list">
-      <li><a href="/?page=1">All Projects</a></li>
-      <li><a href="/?category=6&page=1">Web Development</a></li>
-      <li><a href="/?category=5&page=1">Vanilla</a></li>
-      <li><a href="/?category=8&page=1">Tool</a></li>
-      <li><a href="/?category=9&page=1">Utility</a></li>
-      <li><a href="/?category=13&page=1">Data Analysis</a></li>
-    </ul>
-  </nav>
+  <div class="sidebar">
+    <header>
+      <h1>
+        <a href="/?category=1&page=1">
+          <pre>&lt; <span id="typing"></span
+            ><span id="cursor"></span> /&gt;</pre>
+        </a>
+      </h1>
+      <form action="/add">
+        <button class="icon-text">
+          <img src="/images/plus.svg" alt="Add icon" />
+          <p>New project</p>
+        </button>
+      </form>
+    </header>
+    <nav>
+      <ul role="list">
+        <li><a href="/?page=1">All Projects</a></li>
+        <li><a href="/?category=6&page=1">Web Development</a></li>
+        <li><a href="/?category=5&page=1">Vanilla</a></li>
+        <li><a href="/?category=8&page=1">Tool</a></li>
+        <li><a href="/?category=9&page=1">Utility</a></li>
+        <li><a href="/?category=13&page=1">Data Analysis</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="sidebar-button"></div>
 </aside>
