--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -25,5 +25,5 @@
       </ul>
     </nav>
   </div>
-  <div class="sidebar-button"></div>
+  <div class="sidebar-button" id="sidebar-button"></div>
 </aside>
