--- a/views/project.ejs
+++ b/views/project.ejs
@@ -26,7 +26,7 @@
       <% }); %>
     </div>
   </div>
-  <p><%= project.description %></p>
+  <p><%- project.description.replace(/\n/g, "<br />") %></p>
   <section>
     <h3>Features</h3>
     <ul>
