--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
                 <% }); %>
               </div>
             </div>
-            <p class="desc"><%= item.description %></p>
+            <p class="desc"><%- item.description.replace(/\n/g, "<br />") %></p>
           </a>
           <p>Source code: <a href=<%= item.source %> target="_blank" rel="noopener noreferrer"><%= item.source %></a></p>
         </div>
